--- a/random/prezentacija/css/main.css
+++ b/random/prezentacija/css/main.css
@@ -1,3 +1,4 @@
+@import url(c:\Users\Joca\Desktop\TEST_PROG\random\vjxdev.github.com\random\prezentacija\css\reset.css);
 /*!
  * reveal.js
  * http://revealjs.com
@@ -8,6 +9,7 @@
 /*********************************************
  * GLOBAL STYLES
  *********************************************/
+@import url(../../lib/font/source-sans-pro/source-sans-pro.css);
 html {
   width: 100%;
   height: 100%;
@@ -1982,4 +1984,540 @@ body {
 .zoomed .reveal .roll span:after {
   visibility: hidden;
 }
-/*# sourceMappingURL=reveal.css.map */
+
+/**
+ * Black theme for reveal.js. This is the opposite of the 'white' theme.
+ *
+ * By Hakim El Hattab, http://hakim.se
+ */
+section.has-light-background, section.has-light-background h1, section.has-light-background h2, section.has-light-background h3, section.has-light-background h4, section.has-light-background h5, section.has-light-background h6 {
+  color: #222;
+}
+
+/*********************************************
+ * GLOBAL STYLES
+ *********************************************/
+body {
+  background: #191919;
+  background-color: #191919;
+}
+
+.reveal {
+  font-family: "Source Sans Pro", Helvetica, sans-serif;
+  font-size: 42px;
+  font-weight: normal;
+  color: #fff;
+}
+
+::-moz-selection {
+  color: #fff;
+  background: #bee4fd;
+  text-shadow: none;
+}
+
+::selection {
+  color: #fff;
+  background: #bee4fd;
+  text-shadow: none;
+}
+
+::-moz-selection {
+  color: #fff;
+  background: #bee4fd;
+  text-shadow: none;
+}
+
+.reveal .slides section,
+.reveal .slides section > section {
+  line-height: 1.3;
+  font-weight: inherit;
+}
+
+/*********************************************
+ * HEADERS
+ *********************************************/
+.reveal h1,
+.reveal h2,
+.reveal h3,
+.reveal h4,
+.reveal h5,
+.reveal h6 {
+  margin: 0 0 20px 0;
+  color: #fff;
+  font-family: "Source Sans Pro", Helvetica, sans-serif;
+  font-weight: 600;
+  line-height: 1.2;
+  letter-spacing: normal;
+  text-transform: uppercase;
+  text-shadow: none;
+  word-wrap: break-word;
+}
+
+.reveal h1 {
+  font-size: 2.5em;
+}
+
+.reveal h2 {
+  font-size: 1.6em;
+}
+
+.reveal h3 {
+  font-size: 1.3em;
+}
+
+.reveal h4 {
+  font-size: 1em;
+}
+
+.reveal h1 {
+  text-shadow: none;
+}
+
+/*********************************************
+ * OTHER
+ *********************************************/
+.reveal p {
+  margin: 20px 0;
+  line-height: 1.3;
+}
+
+/* Ensure certain elements are never larger than the slide itself */
+.reveal img,
+.reveal video,
+.reveal iframe {
+  max-width: 95%;
+  max-height: 95%;
+}
+
+.reveal strong,
+.reveal b {
+  font-weight: bold;
+}
+
+.reveal em {
+  font-style: italic;
+}
+
+.reveal ol,
+.reveal dl,
+.reveal ul {
+  display: inline-block;
+  text-align: left;
+  margin: 0 0 0 1em;
+}
+
+.reveal ol {
+  list-style-type: decimal;
+}
+
+.reveal ul {
+  list-style-type: disc;
+}
+
+.reveal ul ul {
+  list-style-type: square;
+}
+
+.reveal ul ul ul {
+  list-style-type: circle;
+}
+
+.reveal ul ul,
+.reveal ul ol,
+.reveal ol ol,
+.reveal ol ul {
+  display: block;
+  margin-left: 40px;
+}
+
+.reveal dt {
+  font-weight: bold;
+}
+
+.reveal dd {
+  margin-left: 40px;
+}
+
+.reveal blockquote {
+  display: block;
+  position: relative;
+  width: 70%;
+  margin: 20px auto;
+  padding: 5px;
+  font-style: italic;
+  background: rgba(255, 255, 255, 0.05);
+  -webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
+}
+
+.reveal blockquote p:first-child,
+.reveal blockquote p:last-child {
+  display: inline-block;
+}
+
+.reveal q {
+  font-style: italic;
+}
+
+.reveal pre {
+  display: block;
+  position: relative;
+  width: 90%;
+  margin: 20px auto;
+  text-align: left;
+  font-size: 0.55em;
+  font-family: monospace;
+  line-height: 1.2em;
+  word-wrap: break-word;
+  -webkit-box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15);
+}
+
+.reveal code {
+  font-family: monospace;
+  text-transform: none;
+}
+
+.reveal pre code {
+  display: block;
+  padding: 5px;
+  overflow: auto;
+  max-height: 400px;
+  word-wrap: normal;
+}
+
+.reveal table {
+  margin: auto;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+.reveal table th {
+  font-weight: bold;
+}
+
+.reveal table th,
+.reveal table td {
+  text-align: left;
+  padding: 0.2em 0.5em 0.2em 0.5em;
+  border-bottom: 1px solid;
+}
+
+.reveal table th[align="center"],
+.reveal table td[align="center"] {
+  text-align: center;
+}
+
+.reveal table th[align="right"],
+.reveal table td[align="right"] {
+  text-align: right;
+}
+
+.reveal table tbody tr:last-child th,
+.reveal table tbody tr:last-child td {
+  border-bottom: none;
+}
+
+.reveal sup {
+  vertical-align: super;
+  font-size: smaller;
+}
+
+.reveal sub {
+  vertical-align: sub;
+  font-size: smaller;
+}
+
+.reveal small {
+  display: inline-block;
+  font-size: 0.6em;
+  line-height: 1.2em;
+  vertical-align: top;
+}
+
+.reveal small * {
+  vertical-align: top;
+}
+
+/*********************************************
+ * LINKS
+ *********************************************/
+.reveal a {
+  color: #42affa;
+  text-decoration: none;
+  -webkit-transition: color .15s ease;
+  transition: color .15s ease;
+}
+
+.reveal a:hover {
+  color: #8dcffc;
+  text-shadow: none;
+  border: none;
+}
+
+.reveal .roll span:after {
+  color: #fff;
+  background: #068de9;
+}
+
+/*********************************************
+ * IMAGES
+ *********************************************/
+.reveal section img {
+  margin: 15px 0px;
+  background: rgba(255, 255, 255, 0.12);
+  border: 4px solid #fff;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+}
+
+.reveal section img.plain {
+  border: 0;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.reveal a img {
+  -webkit-transition: all .15s linear;
+  transition: all .15s linear;
+}
+
+.reveal a:hover img {
+  background: rgba(255, 255, 255, 0.2);
+  border-color: #42affa;
+  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.55);
+          box-shadow: 0 0 20px rgba(0, 0, 0, 0.55);
+}
+
+/*********************************************
+ * NAVIGATION CONTROLS
+ *********************************************/
+.reveal .controls {
+  color: #42affa;
+}
+
+/*********************************************
+ * PROGRESS BAR
+ *********************************************/
+.reveal .progress {
+  background: rgba(0, 0, 0, 0.2);
+  color: #42affa;
+}
+
+.reveal .progress span {
+  -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
+  transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
+}
+
+/*********************************************
+ * PRINT BACKGROUND
+ *********************************************/
+@media print {
+  .backgrounds {
+    background-color: #191919;
+  }
+}
+
+.sl {
+  margin: 16px;
+}
+
+.sl h1 {
+  font: 500 42px/86px 'Linux Libertine','Georgia','Times',serif;
+  letter-spacing: 4px;
+}
+
+@media (max-width: 999px) {
+  .sl h1 {
+    font: 500 36px/64px 'Linux Libertine','Georgia','Times',serif;
+  }
+}
+
+@media (max-width: 599px) {
+  .sl h1 {
+    font: 500 24px/46px 'Linux Libertine','Georgia','Times',serif;
+  }
+}
+
+.sl p.main-t {
+  font: 500 36px/36px 'Linux Libertine','Georgia','Times',serif;
+}
+
+@media (max-width: 999px) {
+  .sl p.main-t {
+    font: 500 24px/24px 'Linux Libertine','Georgia','Times',serif;
+  }
+}
+
+@media (max-width: 599px) {
+  .sl p.main-t {
+    font: 500 16px/16px 'Linux Libertine','Georgia','Times',serif;
+  }
+}
+
+.sl p {
+  font: 500 20px/20px 'Linux Libertine','Georgia','Times',serif;
+}
+
+.button {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  position: relative;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  -webkit-tap-highlight-color: transparent;
+  display: inline-block;
+  white-space: nowrap;
+  text-decoration: none;
+  vertical-align: baseline;
+  text-align: center;
+  margin: 0;
+  min-width: 64px;
+  line-height: 36px;
+  padding: 2px 18px;
+  color: white;
+  background-color: #3ea0e3;
+  border-radius: 4px;
+}
+
+.button span {
+  font: 400 16px/16px Open Sans, sans-serif;
+}
+
+.mb-1 {
+  margin-bottom: 8px;
+}
+
+.mb-2 {
+  margin-bottom: 16px;
+}
+
+.mb-3 {
+  margin-bottom: 24px;
+}
+
+.mb-4 {
+  margin-bottom: 32px;
+}
+
+.mb-5 {
+  margin-bottom: 40px;
+}
+
+.pb-1 {
+  margin-bottom: 8px;
+}
+
+.pb-2 {
+  margin-bottom: 16px;
+}
+
+.pb-3 {
+  margin-bottom: 24px;
+}
+
+.pb-4 {
+  margin-bottom: 32px;
+}
+
+.pb-5 {
+  margin-bottom: 40px;
+}
+
+.mc {
+  margin: 0 auto;
+}
+
+.mn {
+  margin: 0 !important;
+}
+
+.col-3__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.col-3__column {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 calc(100%/3);
+          flex: 1 1 calc(100%/3);
+  padding-right: 16px;
+}
+
+@media (max-width: 599px) {
+  .col-3__column {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 100%;
+            flex: 1 1 100%;
+    padding-right: 0;
+    margin: 0 0 24px;
+  }
+}
+
+.col-3__column:last-child {
+  padding-right: 0;
+  margin: 0;
+}
+
+.col-2__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.col-2__column {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 calc(100%/2);
+          flex: 1 1 calc(100%/2);
+  padding-right: 24px;
+}
+
+@media (max-width: 599px) {
+  .col-2__column {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 100%;
+            flex: 1 1 100%;
+    padding-right: 8px;
+  }
+}
+
+.p-all {
+  border: 4px solid #fff;
+  padding: 0 8px 0 16px;
+}
+
+.bg-light {
+  background-color: #222222;
+}
+
+.text-l {
+  text-align: left;
+}
+
+.sl.box-left {
+  position: fixed;
+  text-align: right;
+  right: 0;
+  top: 48px;
+}
+
+@media (max-width: 999px) {
+  .sl.box-left {
+    top: 12px;
+  }
+}
+/*# sourceMappingURL=main.css.map */
